<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/my_profile"
            android:visible="false" />
        <item
            android:id="@+id/nav_center"
            android:title="@string/centers" />
        <item
            android:id="@+id/nav_fee"
            android:title="@string/pay_membership_fee" />

    </group>

    <item android:title="@string/syllabus">
        <menu>

            <item
                android:id="@+id/reach_and_teach"
                android:title="@string/reach_and_teach" />
            <item
                android:id="@+id/footpathshala"
                android:title="@string/footpathshala" />
        </menu>
    </item>
    <item android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_website"
                android:title="@string/visit_upay_website" />
            <item
                android:id="@+id/nav_policy"
                android:title="@string/policy_amp_guidelines" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
